amp-conformance/Tests/5_Data_Cont/5_1_array/5_1_4_v_o/section/Negative/Convenience.03/test.cpp
// Copyright (c) Microsoft
// All rights reserved
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
// You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
// THIS CODE IS PROVIDED *AS IS* BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING WITHOUT LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
// See the Apache Version 2.0 License for specific language governing permissions and limitations under the License.
/// <tags>P1</tags>
/// <summary>Test invalid use of convenience APIs for sections (static assert)</summary>
//#Expects: Error: error C2664

#include <amptest.h>
#include <amptest_main.h>

using namespace Concurrency;
using namespace Concurrency::Test;

runall_result test_main()
{
    array<int, 2> av(extent<2>(10,10));
    av.section(index<2>(0,0),extent<2>(1,10));  // Trying to create section of 1-row of 2D array
    av.section(index<2>(0,0),extent<1>(10)); // This is incorrect. this gives compilation errors
    return runall_fail;
}

